added two new line

--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,7 @@
         Hello World
         <h1>Welcome to my website</h1>
         This is my website
+        My name is Kawsar
+        I went to college today
     </body>
 </html>
