--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,6 @@
         <h1>Welcome to my website</h1>
         This is my website
         My name is Kawsar
-        I went to college today
+        I went to college but it was really hot today.
     </body>
 </html>
