added yet two lines

--- a/hello.html
+++ b/hello.html
@@ -4,10 +4,7 @@
         <title>Hello World</title>
     </head>
     <body>
-        Hello World
-        <h1>Welcome to my website</h1>
-        This is my website
-        My name is Kawsar
-        I went to college but it was really hot today.
+        <h1>Hello World</h1>
+        <h4>Welcome to my website</h4>
     </body>
 </html>
